--- a/css.css
+++ b/css.css
@@ -50,6 +50,10 @@ header{
     padding-bottom: 25px;
     
 }
+
+.info h1{
+    margin-left: 15px;
+}
 .info li{
     margin-left: 50px;
     padding: 4px;
@@ -64,4 +68,25 @@ header{
     font-size: 25px;
     text-align: center;
     color: azure;
+}
+
+@media only screen and (min-width: 1000px) {
+    .info{
+        margin-left: 25px;
+    }
+    .headdiv{
+        display: flex;
+        flex-direction: row;
+    }
+
+}
+
+@media only screen and (max-width: 600px){
+    .Main1{
+        display: flex;
+        flex-direction: column;
+    }
+    .C, .F, .I, .TF{
+        width: 90%;
+    }
 }
